--- a/backend/package.json
+++ b/backend/package.json
@@ -26,12 +26,16 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
     "dotenv": "^16.4.4",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.0",
+    "vitest-mock-extended": "^1.3.1"
   }
 }
