--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
