--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.9",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
   },
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
