azure get object and return valid avatar url in login payload

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,5 +6,8 @@ JWT_REFRESH_SECRET=
 JWT_TTL=
 PASSWORD_RESET_JWT_SECRET=
 GOOGLE_CLIENT_ID=
-SMTP_USER=
-SMTP_PASSWORD=
+GOOGLE_SMTP_USER=
+GOOGLE_SMTP_PASSWORD=
+AZURE_ACCOUNT_NAME=
+AZURE_ACCOUNT_KEY=
+AZURE_CONTAINER_NAME=
