--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "express": "^4.18.2",
     "google-auth-library": "^9.6.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -29,9 +31,11 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^9.0.8",
     "@types/yamljs": "^0.2.34",
     "dotenv": "^16.4.4",
     "nodemon": "^3.0.3",
