--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.ts",
     "build": "tsc -p .",
     "start": "node build/index.js",
-    "test": "vitest"
+    "test": "vitest",
+    "db:seed": "ts-node seeders/mainSeeder.ts"
   },
   "keywords": [],
   "author": "",
