--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon index.ts",
     "build": "tsc -p .",
     "start": "node build/index.js",
-    "test": "vitest",
+    "test": "vitest --run",
     "db:seed": "ts-node seeders/mainSeeder.ts"
   },
   "keywords": [],
@@ -16,7 +16,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.17.0",
     "@prisma/client": "^5.9.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "google-auth-library": "^9.6.3",
@@ -30,7 +30,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
